tdf#155847 sw tracked table column: manage multiple changes

In Manage Changes dialog window, group also redlines of
multiple different column changes.

Follow-up to commit cc52d895314dd7b67de916bd90ccbfa098e77419
"tdf#155342 sw tracked table column: manage changes".

Change-Id: I3c9e69bf554bc5b4ce9473f95fff5954228758bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153172
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>